# pretix-vacc-utils

./: .update-locales.sh  MANIFEST.in  Makefile  README.rst  api.http  pyproject.toml  setup.cfg  setup.py
.github/workflows/: style.yml  tests.yml
pretix_vacc_autosched/: __init__.py  api.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
pretix_vacc_autosched/migrations/: 0001_initial.py  0002_auto_20210310_1210.py  0003_itemconfig_max_days.py  0004_itemconfig_second_item.py
pretix_vacc_autosched/static/pretix_vacc_autosched/: style.css
pretix_vacc_autosched/templates/pretix_vacc_autosched/: self_service_index.html  self_service_order.html  settings.html  thanks.html
